<?xml version="1.0"?>
<package format="2">
  <name>sun_seeker</name>
  <version>0.0.1</version>
  <description>ROS package that publishes the vector direction to the sun.</description>

  <maintainer email="nkhera@andrew.cmu.edu">Neil Khera</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rosgraph_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

</package>
